[package]
name = "primitive-from"
version = "1.0.2"
authors = ["Ken Reed <kenakioreed@gmail.com>"]
edition = "2018"
description = "Provides a trait PrimitiveFrom that is what From is to Into for num_traits::AsPrimitive"
license = "MIT/Apache-2.0"
repository = "https://github.com/tiby312/primitive_from"
keywords = ["as", "cast","primitive","from"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
